--- a/styles/partials/header.css
+++ b/styles/partials/header.css
@@ -39,6 +39,14 @@
     line-height: 4.2rem;
 }
 
+.page-header .header-content p {
+    max-width: 30rem;
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+    color: var(--color-text-in-primary);
+    margin-top: 2.4rem;
+}
+
 @media (min-width: 700px) {
     .page-header  {
         height: 340px;
@@ -58,14 +66,22 @@
         margin: 0 auto;
     }
 
-    .page-header .header-content strong {
+    .schedule-item {
+        display: grid;
+        grid-template-columns: 2fr 1fr 1fr;
+        column-gap: 1.6rem;
+    }
+
+    .page-header #schedule-items .header-content strong {
         max-width: 350px;
     }
 
-    .page-header .header-content p {
+    .page-header #schedule-items .header-content p {
         max-width: 30rem;
         font-size: 1.6rem;
         line-height: 2.6rem;
         color: var(--color-text-in-primary);
         margin-top: 2.4rem;
     }
+    
+}
